objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Status_Reason__c</fullName>
        <label>Opportunity Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery/Preparing for Sale</fullName>
                </value>
                <value>
                    <fullName>Discovery/Prepare for Sale Overdue</fullName>
                </value>
                <value>
                    <fullName>Meeting w/ Decision Maker Scheduled</fullName>
                </value>
                <value>
                    <fullName>Building Relationship</fullName>
                </value>
                <value>
                    <fullName>Cannot Connect w/ Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Liquor License - Local</fullName>
                </value>
                <value>
                    <fullName>Liquor License - State</fullName>
                </value>
                <value>
                    <fullName>Corporate Acceptance</fullName>
                </value>
                <value>
                    <fullName>Criminal Record Identified</fullName>
                </value>
                <value>
                    <fullName>Customer Not Ready</fullName>
                </value>
                <value>
                    <fullName>Customer on Vacation</fullName>
                </value>
                <value>
                    <fullName>Gaming Area Buildout</fullName>
                </value>
                <value>
                    <fullName>Municipal Requirements</fullName>
                </value>
                <value>
                    <fullName>Truck Stop Requirements</fullName>
                </value>
                <value>
                    <fullName>Agreement/Documentation Needed</fullName>
                </value>
                <value>
                    <fullName>Account and Related Items</fullName>
                </value>
                <value>
                    <fullName>Counsel Review</fullName>
                </value>
                <value>
                    <fullName>Opportunity Approval</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Competitor Agreement expires less than 1 year</fullName>
                </value>
                <value>
                    <fullName>Corporate Status / Tax Issue</fullName>
                </value>
                <value>
                    <fullName>Gaming Application</fullName>
                </value>
                <value>
                    <fullName>Competitor Agreement Expires 3-5 Years</fullName>
                </value>
                <value>
                    <fullName>Competitor Agreement Expires greater than 5 years</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Lost Momentum</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Poor Sales Qualfification</fullName>
                </value>
                <value>
                    <fullName>No Chance at Eligibility</fullName>
                </value>
                <value>
                    <fullName>Not Actively Worked/ Reassignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                    <default>true</default>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>On Track in Eligibility</fullName>
                </value>
                <value>
                    <fullName>Stuck in Eligibility</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Do Not Recycle</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                    <isActive>false</isActive>
                    <label>Closed Lost</label>
                </value>
                <value>
                    <fullName>Closed as Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Closed as Rejected</label>
                </value>
                <value>
                    <fullName>Do Not Recylce</fullName>
                    <isActive>false</isActive>
                    <label>Do Not Recylce</label>
                </value>
                <value>
                    <fullName>On Track in Eligibity</fullName>
                    <isActive>false</isActive>
                    <label>On Track in Eligibity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organic Gaming Machines</fullName>
                </value>
                <value>
                    <fullName>Competitor Gaming Machines</fullName>
                </value>
                <value>
                    <fullName>Amusements</fullName>
                </value>
                <value>
                    <fullName>Gaming Extension</fullName>
                </value>
                <value>
                    <fullName>Standalone ATM</fullName>
                </value>
                <value>
                    <fullName>Merger &amp; Acquisition Gaming Machines</fullName>
                </value>
                <value>
                    <fullName>Jurisdiction Opt-Out Gaming Machines</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Digital Marketing</label>
                </value>
                <value>
                    <fullName>Merchant Solutions</fullName>
                    <isActive>false</isActive>
                    <label>Merchant Solutions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Live_Date__c</fullName>
        <label>Original Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>&quot;Other&quot; Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Category__c</fullName>
        <label>Page Navigator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Information</fullName>
                </value>
                <value>
                    <fullName>Game Plan</fullName>
                </value>
                <value>
                    <fullName>Licensing Eligibility</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>Assessment - All</fullName>
                    <isActive>false</isActive>
                    <label>Assessment - All</label>
                </value>
                <value>
                    <fullName>Business Info</fullName>
                    <isActive>false</isActive>
                    <label>Assessment - Business Info</label>
                </value>
                <value>
                    <fullName>Gaming Layout</fullName>
                    <isActive>false</isActive>
                    <label>Assessment - Gaming Layout</label>
                </value>
                <value>
                    <fullName>Geography</fullName>
                    <isActive>false</isActive>
                    <label>Assessment - Geography</label>
                </value>
                <value>
                    <fullName>Location Story</fullName>
                    <isActive>false</isActive>
                    <label>Assessment - Location Story</label>
                </value>
                <value>
                    <fullName>Closure Reason</fullName>
                    <isActive>false</isActive>
                    <label>Closed Lost</label>
                </value>
                <value>
                    <fullName>Closing</fullName>
                    <isActive>false</isActive>
                    <label>Closing Won</label>
                </value>
                <value>
                    <fullName>Custom Presentation</fullName>
                    <isActive>false</isActive>
                    <label>Custom Presentation</label>
                </value>
                <value>
                    <fullName>Executive Approval</fullName>
                    <isActive>false</isActive>
                    <label>Executive Approval</label>
                </value>
                <value>
                    <fullName>Main Page</fullName>
                    <isActive>false</isActive>
                    <label>Main Page</label>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                    <isActive>false</isActive>
                    <label>Negotiation</label>
                </value>
                <value>
                    <fullName>Negotiation Commissions</fullName>
                    <isActive>false</isActive>
                    <label>Negotiation Commissions</label>
                </value>
                <value>
                    <fullName>Negotiation Vetter</fullName>
                    <isActive>false</isActive>
                    <label>Negotiation Vetter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentAcctId__c</fullName>
        <formula>CASESAFEID(Account.Parent.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentAcctId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Private lot</fullName>
                </value>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Operator_Credit_Commission__c</fullName>
        <label>Partner Operator Credit Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Operator_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Operator Credit</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Partner Operator Credit)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patrons_Under_21_Allowed_to_Enter__c</fullName>
        <label>Patrons Under 21 Allowed to Enter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <formula>Account.ShippingStreet &amp;BR()&amp; Account.ShippingCity &amp;&apos;, &apos;&amp;  Account.ShippingState &amp;&apos; &apos;&amp; Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Acreage__c</fullName>
        <label>Potential Acreage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presentation_Appt_Date__c</fullName>
        <label>Presentation Appt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_ID_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project ID</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID Delete</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lookup__c</fullName>
        <label>Project ID Delete 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projection__c</fullName>
        <formula>Account.MunicipalityLookup__r.HPD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Projected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Redemption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Redemption</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria!</errorMessage>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>REDEMPT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proximity_to_Bathroom__c</fullName>
        <label>Proximity to Bathroom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5 feet</fullName>
                </value>
                <value>
                    <fullName>5 to 10 feet</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proximity_to_Closest_Hwy_Exit_miles__c</fullName>
        <label>Proximity to Closest Hwy Exit (miles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proximity_to_Closest_Main_St_miles__c</fullName>
        <label>Proximity to Closest Main St (miles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proximity_to_Main_Entrance__c</fullName>
        <label>Proximity to Main Entrance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5 feet</fullName>
                </value>
                <value>
                    <fullName>5 to 10 feet</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_Revenue_Date__c</fullName>
        <label>Qualified Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Sales_Effort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for Video Gaming opptys.</description>
        <label>Related Sales Effort</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>AE Video Gaming</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Sales Effort</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Time_Left_on_Agreement__c</fullName>
        <label>Remaining Time Left on Agreement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Area__c</fullName>
        <label>Retail Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strip Mall</fullName>
                </value>
                <value>
                    <fullName>Downtown</fullName>
                </value>
                <value>
                    <fullName>Thoroughfare</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Agent_Membership_Rcvs_Gaming_Rev__c</fullName>
        <formula>Account.Sales_Agent_Membership_Rcvs_Gaming_Rev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agent Membership Rcvs Gaming Rev?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Ownership__c</fullName>
        <formula>Account.Sales_Agent_Ownership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agent Ownership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Initial_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Ops Initial Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Toolbox__c</fullName>
        <inlineHelpText>Select All that Apply</inlineHelpText>
        <label>Sales Toolbox</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Touch Presentation</fullName>
                </value>
                <value>
                    <fullName>BDM Website</fullName>
                    <label>BDM Resource Page</label>
                </value>
                <value>
                    <fullName>Accel Newsletter</fullName>
                </value>
                <value>
                    <fullName>Testimonial Sheets</fullName>
                    <label>Case Studies</label>
                </value>
                <value>
                    <fullName>North Folder</fullName>
                </value>
                <value>
                    <fullName>South Folder</fullName>
                </value>
                <value>
                    <fullName>Marketing Brochure</fullName>
                </value>
                <value>
                    <fullName>Switch to Accel - Truck Stop Brochure</fullName>
                </value>
                <value>
                    <fullName>Darts Brochure</fullName>
                </value>
                <value>
                    <fullName>Pitch Book - Bar/Restaurant</fullName>
                    <isActive>false</isActive>
                    <label>Pitch Book - Bar/Restaurant</label>
                </value>
                <value>
                    <fullName>Pitch Book - C-Store/Truck Stop</fullName>
                    <isActive>false</isActive>
                    <label>Pitch Book - C-Store/Truck Stop</label>
                </value>
                <value>
                    <fullName>Pitch Book - Gaming Parlor</fullName>
                    <isActive>false</isActive>
                    <label>Pitch Book - Gaming Parlor</label>
                </value>
                <value>
                    <fullName>Pitch Book – Veteran/ Fraternal</fullName>
                    <isActive>false</isActive>
                    <label>Pitch Book – Veteran/ Fraternal</label>
                </value>
                <value>
                    <fullName>Sales Binder</fullName>
                    <isActive>false</isActive>
                    <label>Sales Binder</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Vetter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Vetter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Name_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Map from lead</description>
        <label>Source Name (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sources_of_Foot_Traffic__c</fullName>
        <label>Sources of Foot Traffic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial (office)</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Transportation (main route - highway, busy thoroughfare)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Relationships__c</fullName>
        <label>Special Relationships</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Style_of_Food__c</fullName>
        <label>Specific Style of Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Name_Text__c</fullName>
        <formula>TEXT(StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Liquor_License_Probability__c</fullName>
        <label>State Liquor License Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Liquor_License_Type__c</fullName>
        <label>State Liquor License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Liquor_License_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Exec_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Label changed to Submit for Leadership Approval per Sam Wagner and Penny Senders (meeting 3/6/2023)</description>
        <label>Submit for Leadership Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_Machine_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Machine Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suggested_Gaming_Area_Assets__c</fullName>
        <inlineHelpText>Enter Chairs, Spacers,and Type of Segregation</inlineHelpText>
        <label>Suggested Gaming Area Assets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suggested_VGTs__c</fullName>
        <inlineHelpText>Enter suggested VGTs and Redemption that were discussed with location.</inlineHelpText>
        <label>Suggested VGTs/RT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support_Pictures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Pictures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TUA_Submitted_By2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TUA Submitted By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (TUA Submitted By)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TUA_Submitted_On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TUA Submitted On Behalf Of</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (TUA Submitted On Behalf Of)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_of_Agreement__c</fullName>
        <formula>Account.Total_Length_of_Agreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms of Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_you__c</fullName>
        <formula>&quot;You will be notified when the Application record is created.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thank you!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threat_Matrix__c</fullName>
        <formula>TEXT(Account.Threat_Matrix__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Threat Matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Business_Hours_Open_per_week__c</fullName>
        <formula>Account.Total_Business_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Business Hours Open (per week)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Buildout__c</fullName>
        <label>Type of Buildout</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>Electrical Work</fullName>
                </value>
                <value>
                    <fullName>Full Interior Gut</fullName>
                </value>
                <value>
                    <fullName>Gaming Room Addition</fullName>
                </value>
                <value>
                    <fullName>Ground Up Build</fullName>
                </value>
                <value>
                    <fullName>Half Wall</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Remodel</fullName>
                </value>
                <value>
                    <fullName>Separate Gaming Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Chairs__c</fullName>
        <label>Type of Chairs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Entertainment__c</fullName>
        <inlineHelpText>Example: Bingo, Trivia, Live Music, Karaoke</inlineHelpText>
        <label>Type of Entertainment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_POS_System__c</fullName>
        <label>Type of POS System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Parking__c</fullName>
        <label>Type of Parking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>On-site parking lot (7 spaces or below)</fullName>
                </value>
                <value>
                    <fullName>On-site parking lot (above 7 spaces)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Spacers__c</fullName>
        <label>Type of Spacers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vetting_Notes__c</fullName>
        <inlineHelpText>Identify performance and relationship strength indicators.</inlineHelpText>
        <label>Vetting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vetting_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vetting Questionnaire</label>
        <referenceTo>Vetting_Questionnaire__c</referenceTo>
        <relationshipLabel>Vetting Questionnaire</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website_Completed__c</fullName>
        <label>Website Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Started_if_applicable__c</fullName>
        <label>Website Started (if applicable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Email_Sent_Digital_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Email Sent (Digital Marketing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_are_competitor_VGT_game_sets__c</fullName>
        <label>What are competitor VGT game sets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_competitor_layouts__c</fullName>
        <label>What are competitor layouts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_competitor_marketing_strategies__c</fullName>
        <description>What are competitor marketing strategies? Look on FB, Yelp, Twitter, Instagram, Ect. - Do they have a loyalty program</description>
        <inlineHelpText>What are competitor marketing strategies? Look on FB, Yelp, Twitter, Instagram, Ect. - Do they have a loyalty program</inlineHelpText>
        <label>What are competitor marketing strategies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_the_changes_being_made__c</fullName>
        <label>What are the changes being made?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_are_their_expectations_from_Accel__c</fullName>
        <label>What are their expectations from Accel?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_confidence_do_you_have_that_they_wi__c</fullName>
        <label>Confidence do you have that they win</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_evidence_to_support_this_claim__c</fullName>
        <label>What evidence to support this claim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>